tests/sawn/fixtures/invalid/26_multiline_in_table_cell.sawn
// INVALID: Multi-line string in table cell
data[][] name,bio
  "Alice",
    Hello world
